# pinpoint-cpp-examples

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  CMakePresets.json  MODULE.bazel  README.md  docker-compose.yml
civetweb/: BUILD.bazel  CMakeLists.txt  civetweb_example.c
cmake/: CppHttplib.cmake
cpptrace/: BUILD.bazel  CMakeLists.txt  cpptrace_example.cpp  http_trace_context.h
curl/: BUILD.bazel  CMakeLists.txt  curl_web_example.cpp
grpc/: BUILD.bazel  CMakeLists.txt  grpc_client.cpp  grpc_server.cpp  pinpoint_grpc_context.h  pinpoint_grpc_interceptors.h  testapp.proto
kafka/: BUILD.bazel  CMakeLists.txt  kafka_consumer.cpp  kafka_trace_context.h  kafka_web_producer.cpp
mongodb/: BUILD.bazel  CMakeLists.txt  mongo_example.cpp
mysql/: BUILD.bazel  CMakeLists.txt  init.sql  mysql_example.cpp
redis/: BUILD.bazel  CMakeLists.txt  redis_example.cpp
